--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,8 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
-    buildTypes {a
+    buildTypes {
+        a
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -27,6 +28,9 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.squareup.okhttp:okhttp:2.0.0'
-    implementation files('libs/wfsdk.jar')
     implementation 'com.android.support:design:28.0.0'
+    implementation files('libs/wfsdk.jar')
+    implementation files('libs/btsdk.jar')
+    implementation files('libs/usbsdk.jar')
+
 }
