--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,8 @@
         </activity>
         <activity android:name=".ServiceActivity" />
         <activity android:name=".BillDetailActivity" />
-        <activity android:name=".ProductActivity"></activity>
+        <activity android:name=".ProductActivity" />
+        <activity android:name=".TestPrintActivity"></activity>
     </application>
 
 </manifest>
